EXTRA_DIST = \
	behave.py \
	bubbles.py \
	cairo-texture.py \
	clock.py \
	custom-actor.py \
	custom-container.py \
	entry.py \
	flowers.py \
	hello.py \
	light0.png \
	rects.py \
	redhand_alpha.png \
	redhand.png \
	reflection.py \
	script.py \
	super-oh.py \
	test-animation.py \
	test-binding-pool.py \
	test-easing.py \
	test-multitexture.py \
	test-scale.py \
	test-texture-pixmap.py
